--- a/digitala.html
+++ b/digitala.html
@@ -949,34 +949,54 @@
                 <!-- Feedback Card Example -->
                 <div class="feedback-card">
                     <div class="feedback-header">
-                        <img src="https://imgur.com/your-client-photo.jpg" alt="Client Photo" class="feedback-photo"
+                        <img src="https://imgur.com/QbJ9HTu.jpg" alt="Client Photo" class="feedback-photo"
                             loading="lazy" />
                         <div>
-                            <div class="feedback-name">Client Name</div>
-                            <div class="feedback-role">Role / Company</div>
+                            <div class="feedback-name">Mahmoud Cherham</div>
+                            <div class="feedback-role">Founder of Crepeno Restaurant</div>
                         </div>
                     </div>
                     <div class="feedback-content">
                         <blockquote>
-                            “Tala is a true digital creative. Her work transformed our brand and her collaborative
-                            spirit made the process inspiring. Highly recommend!”
+                            “Honestly, the result were beyond our expectations. The outcome was amazing, and we gained
+                            more followers.
+                            May God bless your work and make things easier for you, you are truly talented.”
                         </blockquote>
                     </div>
                 </div>
                 <!-- More Feedback Cards: Copy/Paste and edit -->
                 <div class="feedback-card">
                     <div class="feedback-header">
-                        <img src="https://imgur.com/your-client2-photo.jpg" alt="Client Photo" class="feedback-photo"
+                        <img src="https://imgur.com/lqmTfsa.jpg" alt="Client Photo" class="feedback-photo"
                             loading="lazy" />
                         <div>
-                            <div class="feedback-name">Another Client</div>
-                            <div class="feedback-role">Founder, StartupX</div>
+                            <div class="feedback-name">Jana Bakir</div>
+                            <div class="feedback-role">BAU Student</div>
                         </div>
                     </div>
                     <div class="feedback-content">
                         <blockquote>
-                            “Exceptional design and strategy. Tala helped us launch with confidence and style. Will work
-                            with her again!”
+                            “Hey love, I genuinely want to thank you from the bottom of my heart for your work on my CV
+                            and cover letter. I absolutely loved them. Everything was so well-organized, polished, and
+                            delivered right on time. I even ended up getting an A in the course, so thank you so much.”
+                        </blockquote>
+                    </div>
+                </div>
+                <!-- More Feedback Cards: Copy/Paste and edit -->
+                <div class="feedback-card">
+                    <div class="feedback-header">
+                        <img src="https://imgur.com/lqmTfsa.jpg" alt="Client Photo" class="feedback-photo"
+                            loading="lazy" />
+                        <div>
+                            <div class="feedback-name">Raghad Nasser</div>
+                            <div class="feedback-role">Founder of Lamsa Candles Store</div>
+                        </div>
+                    </div>
+                    <div class="feedback-content">
+                        <blockquote>
+                            “I am beyond impressed with your work! Your designs are truly exceptional and stand out in
+                            every way. The creativity, attention to detail, and overall quality are unmatched. I
+                            absolutely loved the results and couldn’t be happier with them”
                         </blockquote>
                     </div>
                 </div>
