--- a/digitala.html
+++ b/digitala.html
@@ -726,7 +726,7 @@
                 Services</h2>
             <div class="services-grid creative-services">
                 <!-- Example images used below, replace URLs as needed -->
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Creative%20Copywriting.%20Can%20you%20help%20me%20with%20content%20for%20my%20brand?"
+                <a href="https://wa.me/71732045?text=Hey!%20I%E2%80%99d%20love%20your%20help%20designing%20a%20smooth%20and%20intuitive%20digital%20experience."
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
                         style="background-image:url('https://imgur.com/J50aXoK.png');">
@@ -740,7 +740,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Branding%20%26%20Identity%20services.%20Can%20we%20discuss%20my%20project?"
+                <a href="https://wa.me/71732045?text=Hi!%20I%E2%80%99m%20excited%20to%20boost%20my%20brand%20with%20your%20Marketing%20%26%20Branding%20services!"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
                         style="background-image:url('https://imgur.com/zvh1VKb.png');">
@@ -753,7 +753,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Web%20Design%20%26%20Development.%20Can%20you%20help%20me%20build%20a%20website?"
+                <a href="https://wa.me/71732045?text=Hi!%20Can%20you%20help%20me%20grow%20my%20social%20media%20and%20engage%20my%20audience%3F"
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
                         style="background-image:url('https://imgur.com/MwsLLUA.png');">
@@ -766,7 +766,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Social%20Media%20Management.%20Can%20we%20talk%20about%20my%20online%20presence?"
+                <a href="https://wa.me/71732045?text=Hey!%20I%20need%20awesome%20content%20that%20really%20connects%20with%20my%20audience."
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
                         style="background-image:url('https://imgur.com/dkhDiNJ.png');">
@@ -779,7 +779,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Digital%20Strategy.%20Can%20you%20guide%20me%20on%20how%20to%20grow%20my%20business%20online?"
+                <a href="https://wa.me/71732045?text=Hi!%20I%E2%80%99m%20looking%20for%20a%20website%20that%20looks%20great%20and%20works%20perfectly."
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
                         style="background-image:url('https://imgur.com/nlYpiDS.png');">
@@ -792,7 +792,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://wa.me/71732045?text=Hi%20Tala!%20I'm%20interested%20in%20Graphic%20Design.%20Can%20you%20create%20visuals%20for%20my%20brand%20or%20project?"
+                <a href="https://wa.me/71732045?text=Hey!%20I%E2%80%99d%20love%20your%20help%20with%20CVs%2C%20resumes%2C%20portfolios%2C%20presentations%2C%20or%20custom%20designs."
                     target="_blank" rel="noopener">
                     <div class="service-card creative-card"
                         style="background-image:url('https://imgur.com/pd3d3ZX.png');">
@@ -936,6 +936,13 @@
                     <div class="file-content">
                         <div class="file-title">Menu Project</div>
                         <div class="file-desc">Bas Pasta Menu – Crepeno</div>
+                    </div>
+                </a>
+                <a class="file-card" href="https://tala-chibli11.github.io/projects/lamsa.html" target="_blank">
+                    <div class="file-tab"></div>
+                    <div class="file-content">
+                        <div class="file-title">Visual Identity Project</div>
+                        <div class="file-desc">Lamsa Candles</div>
                     </div>
                 </a>
     </section>
