--- a/digitala.html
+++ b/digitala.html
@@ -726,24 +726,9 @@
                 Services</h2>
             <div class="services-grid creative-services">
                 <!-- Example images used below, replace URLs as needed -->
-                <a href="https://wa.me/71732045?text=Hey!%20I%E2%80%99d%20love%20your%20help%20designing%20a%20smooth%20and%20intuitive%20digital%20experience."
-                    target="_blank" rel="noopener">
-                    <div class="service-card creative-card"
-                        style="background-image:url('https://imgur.com/J50aXoK.png');">
-                        <div class="service-glass">
-                            <div class="service-title">UI/UX Design</div>
-                            <div class="service-desc">I design intuitive and modern user experiences that blend
-                                creativity
-                                with functionality. From wireframes to final interfaces, I ensure every detail is
-                                crafted to
-                                engage users and deliver seamless digital journeys.</div>
-                        </div>
-                    </div>
-                </a>
                 <a href="https://wa.me/71732045?text=Hi!%20I%E2%80%99m%20excited%20to%20boost%20my%20brand%20with%20your%20Marketing%20%26%20Branding%20services!"
                     target="_blank" rel="noopener">
-                    <div class="service-card creative-card"
-                        style="background-image:url('https://imgur.com/zvh1VKb.png');">
+                    <div class="service-card creative-card" style="background-image:url('');">
                         <div class="service-glass">
                             <div class="service-title">Marketing & Branding</div>
                             <div class="service-desc">I help businesses build strong brand identities and marketing
@@ -755,8 +740,7 @@
                 </a>
                 <a href="https://wa.me/71732045?text=Hi!%20Can%20you%20help%20me%20grow%20my%20social%20media%20and%20engage%20my%20audience%3F"
                     target="_blank" rel="noopener">
-                    <div class="service-card creative-card"
-                        style="background-image:url('https://imgur.com/MwsLLUA.png');">
+                    <div class="service-card creative-card" style="background-image:url('');">
                         <div class="service-glass">
                             <div class="service-title">Social Media Management</div>
                             <div class="service-desc">I create and manage content that builds engagement, grows
@@ -768,8 +752,7 @@
                 </a>
                 <a href="https://wa.me/71732045?text=Hey!%20I%20need%20awesome%20content%20that%20really%20connects%20with%20my%20audience."
                     target="_blank" rel="noopener">
-                    <div class="service-card creative-card"
-                        style="background-image:url('https://imgur.com/dkhDiNJ.png');">
+                    <div class="service-card creative-card" style="background-image:url('');">
                         <div class="service-glass">
                             <div class="service-title">Content Writing & Creation</div>
                             <div class="service-desc">I craft compelling content that captures attention and tells your
@@ -781,8 +764,7 @@
                 </a>
                 <a href="https://wa.me/71732045?text=Hi!%20I%E2%80%99m%20looking%20for%20a%20website%20that%20looks%20great%20and%20works%20perfectly."
                     target="_blank" rel="noopener">
-                    <div class="service-card creative-card"
-                        style="background-image:url('https://imgur.com/nlYpiDS.png');">
+                    <div class="service-card creative-card" style="background-image:url('');">
                         <div class="service-glass">
                             <div class="service-title">Frontend Development</div>
                             <div class="service-desc">I build responsive and visually appealing websites that combine
@@ -794,8 +776,7 @@
                 </a>
                 <a href="https://wa.me/71732045?text=Hey!%20I%E2%80%99d%20love%20your%20help%20with%20CVs%2C%20resumes%2C%20portfolios%2C%20presentations%2C%20or%20custom%20designs."
                     target="_blank" rel="noopener">
-                    <div class="service-card creative-card"
-                        style="background-image:url('https://imgur.com/pd3d3ZX.png');">
+                    <div class="service-card creative-card" style="background-image:url('');">
                         <div class="service-glass">
                             <div class="service-title">Extra Services</div>
                             <div class="service-desc">Alongside my core services, I offer tailored support with CVs,
