--- a/digitala.html
+++ b/digitala.html
@@ -12,21 +12,21 @@
     <link rel="icon" type="image/png+xml" href="https://imgur.com/KseW3Eo.png" />
     <style>
         :root {
-            --black: #111;
             --white: #fff;
-            --gray: #222;
-            --gray-light: #fafafa;
-            --border: #555;
+            --black: #111;
+            --gray: #f5f5f5;
+            --gray-dark: #e5e5e5;
+            --accent: #111;
+            --border: #e0e0e0;
             --radius: 16px;
             --shadow: 0 2px 22px 0 #0001;
             --transition: .19s cubic-bezier(.4, 0, .2, 1);
-            --accent: #fff;
         }
 
         html,
         body {
-            background: var(--black);
-            color: var(--white);
+            background: var(--white);
+            color: var(--black);
             font-family: 'Inter', 'Montserrat', Arial, sans-serif;
             font-size: 17px;
             margin: 0;
@@ -34,17 +34,17 @@
         }
 
         a {
-            color: var(--white);
+            color: var(--accent);
             text-decoration: underline;
             transition: color var(--transition);
         }
 
         a:hover {
-            color: var(--accent);
+            color: #555;
         }
 
         header {
-            background: var(--black);
+            background: var(--white);
             border-bottom: 1px solid var(--border);
             box-shadow: var(--shadow);
             padding: 0 2rem;
@@ -66,14 +66,15 @@
             font-weight: 700;
             letter-spacing: .08em;
             color: var(--accent);
+            text-decoration: none;
         }
 
         .logo img {
             width: 40px;
             height: 40px;
             border-radius: 8px;
-            background: var(--gray);
-            box-shadow: 0 2px 10px #16161644;
+            background: var(--gray-dark);
+            box-shadow: 0 2px 10px #16161622;
             border: 2px solid var(--accent);
         }
 
@@ -99,7 +100,7 @@
 
         nav.menu a.active,
         nav.menu a:hover {
-            color: var(--white);
+            color: var(--black);
             border-bottom: 2px solid var(--accent);
         }
 
@@ -108,16 +109,40 @@
             background: none;
             border: none;
             font-size: 2.3rem;
-            color: var(--white);
+            color: var(--accent);
             cursor: pointer;
             margin-left: 1rem;
+        }
+
+        /* Hamburger for mobile */
+        @media (max-width: 768px) {
+            .menu-toggle {
+                display: block;
+            }
+
+            nav.menu {
+                display: none;
+                flex-direction: column;
+                background: var(--gray);
+                position: absolute;
+                top: 78px;
+                right: 0;
+                left: 0;
+                padding: 1rem 0;
+                border-top: 1px solid var(--border);
+                z-index: 1000;
+            }
+
+            nav.menu.show {
+                display: flex;
+            }
         }
 
         .tab-section {
             display: none;
             max-width: 960px;
             margin: 2.7rem auto 0 auto;
-            background: var(--black);
+            background: var(--gray);
             border-radius: var(--radius);
             box-shadow: var(--shadow);
             padding: 2rem;
@@ -143,10 +168,11 @@
 
         /* About Section */
         .about-container {
-            background: var(--gray);
+            background: var(--white);
             border-radius: var(--radius);
-            box-shadow: 0 4px 20px #0003;
+            box-shadow: 0 4px 20px #0001;
             padding: 2rem;
+            border: 1px solid var(--border);
         }
 
         .about-photo-wrapper {
@@ -161,13 +187,13 @@
             height: 180px;
             object-fit: cover;
             border: 4px solid var(--accent);
-            box-shadow: 0 4px 20px #0005;
+            box-shadow: 0 4px 20px #0002;
             border-radius: 50%;
             transition: box-shadow .3s;
         }
 
         .about-photo-square:hover {
-            box-shadow: 0 8px 34px #fff3;
+            box-shadow: 0 8px 34px #8882;
         }
 
         .about-content {
@@ -185,7 +211,7 @@
 
         .about-paragraph {
             font-size: 1.08rem;
-            color: var(--white);
+            color: var(--black);
             font-weight: 500;
             background: var(--gray);
             padding: 1rem;
@@ -207,7 +233,7 @@
         /* Experience Lists */
         ul,
         ol {
-            color: var(--white);
+            color: var(--black);
             padding-left: 1.2rem;
         }
 
@@ -226,15 +252,16 @@
         .education-place-date,
         .volunteer-place-date {
             font-size: .97rem;
-            color: #ccc;
+            color: #555;
             font-style: italic;
         }
 
         /* Services Section */
         .services-container {
-            background: var(--gray);
+            background: var(--white);
             border-radius: var(--radius);
             padding: 2rem 1.5rem;
+            border: 1px solid var(--border);
         }
 
         .services-grid {
@@ -245,10 +272,10 @@
         }
 
         .service-card {
-            background: var(--black);
+            background: var(--gray);
             border-radius: 10px;
             border: 1.5px solid var(--accent);
-            box-shadow: 0 2px 12px #fff1;
+            box-shadow: 0 2px 12px #0001;
             padding: 1.2rem;
             display: flex;
             flex-direction: column;
@@ -292,9 +319,9 @@
         }
 
         .service-plot:hover {
-            background: var(--accent);
-            color: var(--black);
-            border: 1.5px solid var(--white);
+            background: var(--gray-dark);
+            color: var(--accent);
+            border: 1.5px solid var(--accent);
         }
 
         /* Portfolio/Certificates */
@@ -308,7 +335,7 @@
         .portfolio-card {
             background: var(--gray);
             border-radius: 10px;
-            box-shadow: 0 2px 12px #fff2;
+            box-shadow: 0 2px 12px #0001;
             border: 1px solid var(--accent);
             padding: 1rem;
             display: flex;
@@ -335,7 +362,7 @@
         .file-card {
             background: var(--gray);
             border-radius: 12px;
-            box-shadow: 0 2px 12px #fff2;
+            box-shadow: 0 2px 12px #0001;
             border: 1px solid var(--accent);
             cursor: pointer;
             transition: box-shadow .17s, background .17s;
@@ -346,29 +373,17 @@
         }
 
         .file-card:hover {
-            box-shadow: 0 8px 32px #fff4;
-            background: var(--black);
-        }
-
-        .file-tab {
-            width: 36px;
-            height: 18px;
-            background: var(--accent);
-            border-radius: 10px 10px 4px 4px;
-            position: absolute;
-            top: -2px;
-            left: 16px;
-            box-shadow: 0 2px 7px #fff1;
-            border: 1px solid var(--border);
+            box-shadow: 0 8px 32px #0002;
+            background: var(--white);
         }
 
         .file-content {
             width: 86%;
             margin-top: 2rem;
             padding: .9rem .7rem 1.2rem .7rem;
-            background: var(--black);
+            background: var(--white);
             border-radius: 10px;
-            box-shadow: 0 1px 8px #fff2;
+            box-shadow: 0 1px 8px #0001;
             min-height: 60px;
             display: flex;
             flex-direction: column;
@@ -388,7 +403,7 @@
         .file-desc {
             margin-top: .7em;
             font-size: .97rem;
-            color: #eee;
+            color: #222;
             text-align: center;
             font-weight: 500;
         }
@@ -400,7 +415,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(17, 17, 17, 0.92);
+            background: rgba(245, 245, 245, 0.96);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -408,15 +423,16 @@
         }
 
         .modal-content {
-            background: var(--gray);
+            background: var(--white);
             border-radius: 14px;
-            box-shadow: 0 6px 32px #fff4;
+            box-shadow: 0 6px 32px #0002;
             padding: 1.3rem 1.7rem;
             max-width: 720px;
             width: 97%;
             position: relative;
             max-height: 90vh;
             overflow-y: auto;
+            border: 1px solid var(--border);
         }
 
         .close-modal {
@@ -428,6 +444,8 @@
             cursor: pointer;
             font-weight: bold;
             z-index: 1001;
+            background: none;
+            border: none;
         }
 
         .project-photo-block img {
@@ -440,7 +458,7 @@
         }
 
         .photo-caption {
-            color: #ccc;
+            color: #555;
             font-size: .96rem;
             margin-top: 3px;
             text-align: center;
@@ -448,10 +466,11 @@
 
         /* Feedbacks Section */
         .feedbacks-container {
-            background: var(--gray);
+            background: var(--white);
             border-radius: var(--radius);
-            box-shadow: 0 4px 20px #0003;
+            box-shadow: 0 4px 20px #0001;
             padding: 2rem 1.5rem;
+            border: 1px solid var(--border);
         }
 
         .feedbacks-grid {
@@ -461,9 +480,9 @@
         }
 
         .feedback-card {
-            background: var(--black);
+            background: var(--gray);
             border-radius: 10px;
-            box-shadow: 0 2px 12px #fff2;
+            box-shadow: 0 2px 12px #0001;
             border: 1.2px solid var(--accent);
             padding: 1.2rem 1rem;
             display: flex;
@@ -483,7 +502,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 2px solid var(--accent);
-            background: var(--gray);
+            background: var(--gray-dark);
         }
 
         .feedback-name {
@@ -494,16 +513,16 @@
 
         .feedback-role {
             font-size: .96rem;
-            color: #ccc;
+            color: #555;
             font-weight: 500;
             margin-top: 0.1em;
         }
 
         .feedback-content blockquote {
             font-size: 1rem;
-            color: var(--white);
+            color: var(--accent);
             font-weight: 500;
-            background: var(--gray);
+            background: var(--white);
             padding: .8rem .7rem;
             border-radius: 10px;
             border-left: 4px solid var(--accent);
@@ -518,7 +537,8 @@
             background: var(--gray);
             padding: 1.1rem 1rem;
             border-radius: 12px;
-            box-shadow: 0 2px 8px #fff3;
+            box-shadow: 0 2px 8px #0001;
+            border: 1px solid var(--border);
         }
 
         .contact-form input,
@@ -527,22 +547,22 @@
             border: 1.5px solid var(--accent);
             border-radius: 8px;
             font-size: .99rem;
-            background: var(--black);
-            color: var(--white);
+            background: var(--white);
+            color: var(--accent);
             font-family: inherit;
         }
 
         .contact-form input:focus,
         .contact-form textarea:focus {
-            border: 1.8px solid var(--white);
-            background: #222;
+            border: 1.8px solid var(--accent);
+            background: var(--gray-dark);
             outline: none;
         }
 
         .contact-form button {
             padding: .95rem;
             background: var(--accent);
-            color: var(--black);
+            color: var(--white);
             border: none;
             border-radius: 8px;
             font-size: 1.09rem;
@@ -550,12 +570,12 @@
             cursor: pointer;
             transition: background var(--transition), color var(--transition);
             margin-top: .5rem;
-            box-shadow: 0 2px 8px #fff3;
+            box-shadow: 0 2px 8px #0001;
         }
 
         .contact-form button:hover {
-            background: var(--white);
-            color: var(--gray);
+            background: #555;
+            color: var(--white);
         }
 
         .contacts-social {
@@ -570,7 +590,7 @@
             display: flex;
             align-items: center;
             gap: .5rem;
-            background: var(--black);
+            background: var(--white);
             color: var(--accent);
             padding: .6rem 1.2rem;
             font-size: 1rem;
@@ -581,13 +601,13 @@
             transition: background .17s, color .17s;
             min-width: 110px;
             justify-content: center;
-            box-shadow: 0 2px 8px #fff2;
+            box-shadow: 0 2px 8px #0001;
         }
 
         .contacts-social a:hover {
-            background: var(--accent);
-            color: var(--black);
-            border-color: var(--white);
+            background: var(--gray-dark);
+            color: var(--accent);
+            border-color: var(--accent);
         }
 
         .contacts-social img {
@@ -602,27 +622,27 @@
             right: 28px;
             z-index: 9999;
             background: var(--accent);
-            color: var(--black);
+            color: var(--white);
             border: none;
             border-radius: 50%;
             width: 48px;
             height: 48px;
             font-size: 2rem;
-            box-shadow: 0 6px 18px #fff2;
+            box-shadow: 0 6px 18px #0001;
             cursor: pointer;
             transition: background .2s;
         }
 
         #scrollTopBtn:hover {
-            background: var(--white);
+            background: #555;
         }
 
         footer {
             text-align: center;
             padding: 1.2rem 0 .9rem 0;
             font-size: 1.02rem;
-            background: var(--black);
-            color: var(--white);
+            background: var(--white);
+            color: var(--accent);
             border-top: 1px solid var(--accent);
             margin-top: 2rem;
             letter-spacing: 1px;
@@ -682,55 +702,19 @@
                 max-width: 99vw;
             }
         }
-
-        /* ====== Mobile Menu ====== */
-        .menu-toggle {
-            display: none;
-            font-size: 2rem;
-            background: none;
-            border: none;
-            color: var(--white);
-            cursor: pointer;
-        }
-
-        @media (max-width: 768px) {
-            nav.menu {
-                display: none;
-                flex-direction: column;
-                background: var(--gray);
-                position: absolute;
-                top: 70px;
-                /* حسب ارتفاع الهيدر عندك */
-                right: 0;
-                left: 0;
-                padding: 1rem;
-                border-top: 1px solid var(--border);
-                z-index: 998;
-            }
-
-            nav.menu.show {
-                display: flex;
-            }
-
-            .menu-toggle {
-                display: block;
-            }
-        }
     </style>
 </head>
 
 <body>
     <header>
-        <!-- اللوجو -->
+        <!-- Logo -->
         <a href="#about" class="logo">
             <img src="https://imgur.com/KseW3Eo.png" alt="Logo" />
             Digitala
         </a>
-
-        <!-- زر الهامبرغر (بيبين بس على الموبايل) -->
+        <!-- Hamburger -->
         <button class="menu-toggle" aria-label="Open Menu">&#9776;</button>
-
-        <!-- قائمة الروابط -->
+        <!-- Navigation -->
         <nav class="menu" aria-label="Main navigation">
             <a href="#about" class="active" data-tab="about">About</a>
             <a href="#portfolio" data-tab="portfolio">Certificates</a>
@@ -741,22 +725,9 @@
         </nav>
     </header>
 
-
-    <script>
-        const toggleBtn = document.querySelector(".menu-toggle");
-        const menu = document.querySelector("nav.menu");
-
-        toggleBtn.addEventListener("click", () => {
-            menu.classList.toggle("show");
-        });
-    </script>
-
     <!-- ABOUT -->
     <section class="tab-section active about-section" id="about">
         <div class="about-container">
-            <div class="about-photo-wrapper">
-                <img src="https://imgur.com/f4KbptJ.jpg" alt="Tala Chibli" class="about-photo-square" loading="lazy" />
-            </div>
             <div class="about-content">
                 <h1 class="about-heading">Tala Chibli</h1>
                 <p class="about-paragraph">
@@ -1011,7 +982,7 @@
                     </div>
                 </div>
             </div>
-            <div style="margin-top:1rem; text-align:center; font-size:.97rem; color:#ddd;">
+            <div style="margin-top:1rem; text-align:center; font-size:.97rem; color:#555;">
                 <span>Click any button to chat on WhatsApp about that service!</span>
             </div>
         </div>
@@ -1090,7 +1061,7 @@
     <!-- MODALS -->
     <div id="project-modal-1" class="modal-overlay" style="display:none;">
         <div class="modal-content">
-            <span class="close-modal" data-close="1">&times;</span>
+            <button class="close-modal" data-close="1">&times;</button>
             <div class="project-container">
                 <div class="project-title">Visual Identity Project</div>
                 <div class="project-company">Lamsa Candles</div>
@@ -1117,7 +1088,7 @@
     </div>
     <div id="project-modal-2" class="modal-overlay" style="display:none;">
         <div class="modal-content">
-            <span class="close-modal" data-close="2">&times;</span>
+            <button class="close-modal" data-close="2">&times;</button>
             <div class="project-container">
                 <div class="project-title">Menu Project</div>
                 <div class="project-company">Bas Pasta Menu – Crepeno</div>
